Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalidSetterInjection2.php
<?php
/** @Service */
class FooClassInvalidSetterInjection2
{
    /** @Inject("foo") */
    public function setDependencies($fooService, $barService)
    {
    }
}
